# pixman

./: .gitignore  CODING_STYLE  COPYING  Makefile.am  Makefile.win32  RELEASING  TODO  autogen.sh  configure.ac  libcomp.pc  pixman-1.pc.in  pixman.pc.in
demos/: Makefile.am  composite-test.c  gtk-utils.c  radial-test.c  tri-test.c
pixman/: Makefile.am  Makefile.sources  Makefile.win32  combine.h.inc  combine.inc  combine.pl  loongson-mmintrin.h  make-combine.pl  pixman-access.c  pixman-accessor.h  pixman-arm-common.h  pixman-arm-detect-win32.asm  pixman-arm-neon-asm-bilinear.S  pixman-arm-neon-asm.S  pixman-arm-neon-asm.h  pixman-arm-neon.c  pixman-arm-neon.h  pixman-arm-simd-asm.S  pixman-arm-simd.c  pixman-arm-simd.h  pixman-arm.c  pixman-bits-image.c  pixman-combine.c  pixman-combine.c.template  pixman-combine.h.template  pixman-compiler.h  pixman-compose-operators.c  pixman-compose.c  pixman-compute-region.c  pixman-conical-gradient.c  pixman-cpu.c  pixman-edge-imp.h  pixman-edge.c  pixman-fast-path.c  pixman-fast-path.h  pixman-general.c  pixman-glyph.c  pixman-gradient-walker.c  pixman-image.c  pixman-implementation.c  (+35 more)
test/: Makefile.am  Makefile.sources  Makefile.win32  affine-test.c  alpha-test.c  alphamap.c  blitters-test.c  clip-test.c  combiner-test.c  composite-test.c  composite-traps-test.c  composite.c  fetch-test.c  glyph-test.c  gradient-crash-test.c  gradient-test.c  lowlevel-blt-bench.c  oob-test.c  region-contains-test.c  region-test.c  rotate-test.c  scaling-crash-test.c  scaling-helpers-test.c  scaling-test-bisect.rb  scaling-test.c  stress-test.c  trap-crasher.c  trap-test.c  utils.c  utils.h  window-test.c
